--- a/Src/Canvas/CanvasSomaticCaller/CanvasSomaticCaller.net45/CanvasSomaticCaller.net45.csproj
+++ b/Src/Canvas/CanvasSomaticCaller/CanvasSomaticCaller.net45/CanvasSomaticCaller.net45.csproj
@@ -101,6 +101,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
