--- a/Src/Canvas/Canvas/Canvas.targets
+++ b/Src/Canvas/Canvas/Canvas.targets
@@ -8,6 +8,6 @@
     </None>
   </ItemGroup>-->
   <Target Name="CanvasCopyTarget" AfterTargets="Build;Publish">
-    <Exec Command="robocopy /PURGE $(MSBuildThisFileDirectory)Canvas $(TargetDir)Canvas || if %ERRORLEVEL% LSS 8 exit 0"/>
+    <Exec Command="robocopy /PURGE $(MSBuildThisFileDirectory)Canvas $(OutDir)Canvas || if %ERRORLEVEL% LSS 8 exit 0"/>
   </Target>
 </Project>
