--- a/Src/Canvas/Canvas/Canvas.targets
+++ b/Src/Canvas/Canvas/Canvas.targets
@@ -7,7 +7,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>-->
-  <Target Name="CanvasCopyTarget" AfterTargets="Build;Publish">
-    <Exec Command="robocopy /PURGE $(MSBuildThisFileDirectory)Canvas $(OutDir)Canvas || if %ERRORLEVEL% LSS 8 exit 0"/>
+  <Target Name="CanvasCopyTargetBuild" AfterTargets="Build">
+    <Exec Command="robocopy /PURGE $(MSBuildThisFileDirectory)Canvas $(TargetDir)Canvas || if %ERRORLEVEL% LSS 8 exit 0"/>
+  </Target>
+  <Target Name="CanvasCopyTargetPublish" AfterTargets="Publish">
+    <Exec Command="robocopy /PURGE $(MSBuildThisFileDirectory)Canvas $(ProjectDir)$(PublishDir)Canvas || if %ERRORLEVEL% LSS 8 exit 0"/>
   </Target>
 </Project>
