--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -19,6 +19,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>..\x64\CanvasCore\</OutputPath>
+    <Optimize>False</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
