Split variant metrics by variant size

--- a/Tools/EvaluateCNV/EvaluateCNV.net45/EvaluateCNV.net45.csproj
+++ b/Tools/EvaluateCNV/EvaluateCNV.net45/EvaluateCNV.net45.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CNVChecker.cs" />
+    <Compile Include="CNVEvaluator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
