--- a/.gitignore
+++ b/.gitignore
@@ -43,11 +43,9 @@ TestResult.xml
 [Rr]eleasePS/
 dlldata.c
 
-# .NET Core
+# DNX
 project.lock.json
-project.fragment.lock.json
 artifacts/
-**/Properties/launchSettings.json
 
 *_i.c
 *_p.c
