--- a/Src/Canvas/CanvasPartition/CanvasPartition.csproj
+++ b/Src/Canvas/CanvasPartition/CanvasPartition.csproj
@@ -26,7 +26,11 @@
   <ItemGroup>
     <ProjectReference Include="..\CanvasCommon\CanvasCommon.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <None Include="CanvasPartitionParameters.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="2.8.0.171" />
     <PackageReference Include="Isas.SequencingFiles" Version="3.13.2.254" />
