--- a/Src/Canvas/Canvas.Wrapper/Wrapper/packages.config
+++ b/Src/Canvas/Canvas.Wrapper/Wrapper/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClassicBioinfoTools" version="0.0.3.73" targetFramework="net451" />
-  <package id="Illumina.Common" version="2.8.0.171" targetFramework="net451" />
-  <package id="Isas.FileCompression" version="3.13.2.254" targetFramework="net451" />
-  <package id="Isas.Framework" version="5.7.1.192" targetFramework="net451" />
-  <package id="Isas.Manifests" version="2.12.0.45" targetFramework="net451" />
-  <package id="Isas.Ploidy" version="1.0.2.34" targetFramework="net451" />
-  <package id="Isas.SequencingFiles" version="3.13.2.254" targetFramework="net451" />
+  <package id="ClassicBioinfoTools" version="0.2.0.92" targetFramework="net451" />
+  <package id="Illumina.Common" version="3.1.0.200" targetFramework="net451" />
+  <package id="Isas.FileCompression" version="4.0.1.275" targetFramework="net451" />
+  <package id="Isas.Framework" version="6.0.0.236" targetFramework="net451" />
+  <package id="Isas.Manifests" version="3.0.0.51" targetFramework="net451" />
+  <package id="Isas.Ploidy" version="1.0.2-O00044WGSW-1388" targetFramework="net451" />
+  <package id="Isas.SequencingFiles" version="4.0.1.275" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net451" />
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net451" />
