--- a/Src/Canvas/Combinatorics/Combinatorics.csproj
+++ b/Src/Canvas/Combinatorics/Combinatorics.csproj
@@ -11,4 +11,6 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
+
 </Project>
