--- a/Src/Canvas/CanvasSomaticCaller/CanvasSomaticCaller.csproj
+++ b/Src/Canvas/CanvasSomaticCaller/CanvasSomaticCaller.csproj
@@ -23,6 +23,10 @@
     <OutputPath>..\x64\CanvasCore\</OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>..\x64\CanvasCore\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\CanvasCommon\CanvasCommon.csproj" />
   </ItemGroup>
