--- a/Tools/FlagUniqueKmers/FlagUniqueKmers.csproj
+++ b/Tools/FlagUniqueKmers/FlagUniqueKmers.csproj
@@ -17,6 +17,8 @@
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
+
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="3.1.0.200" />
     <PackageReference Include="Isas.Framework" Version="6.0.0.236" />
