--- a/Src/Canvas/CanvasCommon/CanvasCommon.csproj
+++ b/Src/Canvas/CanvasCommon/CanvasCommon.csproj
@@ -41,6 +41,7 @@
     <PackageReference Include="Isas.Framework" Version="6.10.0.354" />
     <PackageReference Include="Isas.SequencingFiles" Version="4.2.1.300" />
     <PackageReference Include="MathNet.Numerics.Core" Version="3.17.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.1" />
   </ItemGroup>
 
 </Project>
