--- a/Src/Canvas/Canvas/Canvas.nuspec
+++ b/Src/Canvas/Canvas/Canvas.nuspec
@@ -21,7 +21,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\x64\CanvasCore\netcoreapp1.1\publish\*" target="build/Canvas" />
+    <file src="..\x64\CanvasCore\netcoreapp1.1\publish\**" target="build/Canvas" />
     <file src="Canvas.targets" target="build/Canvas.targets" />
     <file src="..\Canvas.Wrapper\bin\x64\Release\netcoreapp1.1\Canvas.Wrapper.dll" target="lib\netstandard1.6" />
     <file src="..\Canvas.Wrapper\bin\x64\Release\netcoreapp1.1\Canvas.dll" target="lib\netstandard1.6" />
