--- a/Src/Canvas/Canvas/Canvas.targets
+++ b/Src/Canvas/Canvas/Canvas.targets
@@ -8,9 +8,9 @@
     </None>
   </ItemGroup>-->
   <Target Name="CanvasCopyTargetBuild" AfterTargets="Build">
-    <Exec Command="robocopy /PURGE $(MSBuildThisFileDirectory)Canvas $(TargetDir)Canvas || if %ERRORLEVEL% LSS 8 exit 0"/>
+    <Exec Command="robocopy /MIR $(MSBuildThisFileDirectory)Canvas $(TargetDir)Canvas || if %ERRORLEVEL% LSS 8 exit 0"/>
   </Target>
   <Target Name="CanvasCopyTargetPublish" AfterTargets="Publish">
-    <Exec Command="robocopy /PURGE $(MSBuildThisFileDirectory)Canvas $(ProjectDir)$(PublishDir)Canvas || if %ERRORLEVEL% LSS 8 exit 0"/>
+    <Exec Command="robocopy /MIR $(MSBuildThisFileDirectory)Canvas $(ProjectDir)$(PublishDir)Canvas || if %ERRORLEVEL% LSS 8 exit 0"/>
   </Target>
 </Project>
