Fix nuspec syntax

--- a/Src/Canvas/Canvas/Canvas.nuspec
+++ b/Src/Canvas/Canvas/Canvas.nuspec
@@ -16,7 +16,7 @@
       <dependency id="Isas.Ploidy" version="[3.0.0.73,4.0.0)" />
       <dependency id="Isas.SequencingFiles" version="[5.0.4.343,6.0.0)" />
       <dependency id="Isas.Framework" version="[7.4.4.511,8.0.0)" />
-      <dependency id="Illumina.Common" version="4.3.0.280,5.0.0)" />
+      <dependency id="Illumina.Common" version="[4.3.0.280,5.0.0)" />
       <dependency id="MathNet.Numerics.Core" version="[3.17.0,4.0.0)" />
     </dependencies>
   </metadata>
