--- a/Src/Canvas/CanvasTest/CanvasTest.csproj
+++ b/Src/Canvas/CanvasTest/CanvasTest.csproj
@@ -20,7 +20,8 @@
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="4.3.0.280" />
     <PackageReference Include="Isas.Framework.UnitTestUtilities" Version="7.4.4.511" />
-    <PackageReference Include="Isas.SequencingFiles" Version="5.0.4.343" />
+    <PackageReference Include="Isas.SequencingFiles" Version="5.3.0-O00355GzipOrTextRead" />
+    <PackageReference Include="JetBrains.Annotations" Version="11.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="NSubstitute" Version="2.0.3" />
     <PackageReference Include="xunit" Version="2.2.0" />
