--- a/Src/Canvas/Canvas.Wrapper/Canvas.Wrapper.csproj
+++ b/Src/Canvas/Canvas.Wrapper/Canvas.Wrapper.csproj
@@ -29,7 +29,7 @@
     <PackageReference Include="Isas.Framework" Version="7.4.4.511" />
     <PackageReference Include="Isas.Manifests" Version="4.2.0.106" />
     <PackageReference Include="Isas.Ploidy" Version="3.0.0.73" />
-    <PackageReference Include="Isas.SequencingFiles" Version="5.3.0-O00355GzipOrTextRead" />
+    <PackageReference Include="Isas.SequencingFiles" Version="5.3.0.356" />
   </ItemGroup>
 
 </Project>
