--- a/Src/Canvas/CanvasPartition/CanvasPartition.csproj
+++ b/Src/Canvas/CanvasPartition/CanvasPartition.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="4.3.0.280" />
-    <PackageReference Include="Isas.SequencingFiles" Version="5.3.0-O00355GzipOrTextRead" />
+    <PackageReference Include="Isas.SequencingFiles" Version="5.3.0.356" />
     <PackageReference Include="MathNet.Numerics.Core" Version="3.17.0" />
   </ItemGroup>
 
