--- a/Src/Canvas/CanvasPartition/CanvasPartition.csproj
+++ b/Src/Canvas/CanvasPartition/CanvasPartition.csproj
@@ -37,6 +37,7 @@
     <PackageReference Include="Illumina.Common" Version="4.3.0.280" />
     <PackageReference Include="Isas.SequencingFiles" Version="5.3.0.356" />
     <PackageReference Include="MathNet.Numerics.Core" Version="3.17.0" />
+    <PackageReference Include="protobuf-net" Version="2.3.2" />
   </ItemGroup>
 
 </Project>
