--- a/Src/Canvas/CanvasSNV/CanvasSNV.csproj
+++ b/Src/Canvas/CanvasSNV/CanvasSNV.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="Illumina.Common" Version="4.3.0.280" />
     <PackageReference Include="Isas.Framework" Version="7.5.2.530" />
     <PackageReference Include="Isas.SequencingFiles" Version="5.3.0.356" />
+    <PackageReference Include="protobuf-net" Version="2.3.2" />
   </ItemGroup>
 
 </Project>
