--- a/Tools/EvaluateCNV/EvaluateCNV.csproj
+++ b/Tools/EvaluateCNV/EvaluateCNV.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="4.3.0.280" />
     <PackageReference Include="Isas.SequencingFiles" Version="5.3.0.356" />
+    <PackageReference Include="protobuf-net" Version="2.3.2" />
   </ItemGroup>
 
 </Project>
