Revert "change .csproj files to put dlls in separate directories for different projects"
This reverts commit 3972ff7456ecb5f3fe744ea1eeeeabe368d6a2ce.

--- a/Src/Canvas/CanvasBin/CanvasBin.csproj
+++ b/Src/Canvas/CanvasBin/CanvasBin.csproj
@@ -23,7 +23,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutputPath>..\x64\CanvasCore\CanvasBin</OutputPath>
+    <OutputPath>..\x64\CanvasCore\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>..\x64\CanvasCore\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
