--- a/Src/Canvas/CanvasClean/CanvasClean.csproj
+++ b/Src/Canvas/CanvasClean/CanvasClean.csproj
@@ -22,7 +22,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutputPath>..\x64\CanvasCore\CanvasClean\</OutputPath>
+    <OutputPath>..\x64\CanvasCore\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>..\x64\CanvasCore\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
