--- a/Src/Canvas/Combinatorics/Combinatorics.csproj
+++ b/Src/Canvas/Combinatorics/Combinatorics.csproj
@@ -7,9 +7,14 @@
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
-
+  <Target Name="CanvasCopyTargetBuild" AfterTargets="Build">
+    <Exec Command="robocopy /MIR $(TargetDir) $(MSBuildThisFileDirectory)..\$(Platform)\$(Configuration)\$(TargetFramework)\$(PackageId)  || if %ERRORLEVEL% LSS 8 exit 0" />
+  </Target>
+  <Target Name="CanvasCopyTargetPublish" AfterTargets="Publish">
+    <Exec Command="robocopy /MIR $(TargetDir) $(MSBuildThisFileDirectory)..\$(Platform)\$(Configuration)\$(TargetFramework)\publish\$(PackageId)  || if %ERRORLEVEL% LSS 8 exit 0" />
+  </Target>
+  
 </Project>
