--- a/Src/Canvas/Canvas.Wrapper/Canvas.Wrapper.csproj
+++ b/Src/Canvas/Canvas.Wrapper/Canvas.Wrapper.csproj
@@ -17,6 +17,10 @@
     <Platforms>x64</Platforms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
+
   <ItemGroup>
     <ProjectReference Include="..\Canvas\Canvas.csproj" />
     <ProjectReference Include="..\CanvasCommon\CanvasCommon.csproj" />
