--- a/Src/Canvas/Canvas/Canvas.csproj
+++ b/Src/Canvas/Canvas/Canvas.csproj
@@ -31,7 +31,7 @@
     <PackageReference Include="Illumina.Common" Version="4.5.0.298" />
     <PackageReference Include="Isas.Framework" Version="7.8.4.572" />
     <PackageReference Include="Isas.Manifests" Version="4.6.2.131" />
-    <PackageReference Include="Isas.SequencingFiles" Version="5.3.2.365" />
+    <PackageReference Include="Isas.SequencingFiles" Version="5.4.0-O00382CANV-104" />
     <PackageReference Include="protobuf-net" Version="2.3.2" />
     <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
   </ItemGroup>
