--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -39,7 +39,7 @@
   
     <PackageReference Include="Illumina.Common" Version="4.5.0.298" />
     <PackageReference Include="Isas.Framework" Version="7.8.4.572" />
-    <PackageReference Include="Isas.SequencingFiles" Version="5.3.2.365" />
+    <PackageReference Include="Isas.SequencingFiles" Version="5.4.0-O00382CANV-104" />
     <PackageReference Include="MathNet.Numerics.Core" Version="3.17.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="protobuf-net" Version="2.3.2" />
