--- a/Src/Canvas/CanvasTest/CanvasTest.csproj
+++ b/Src/Canvas/CanvasTest/CanvasTest.csproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="4.5.0.298" />
     <PackageReference Include="Isas.Framework.UnitTestUtilities" Version="7.8.4.572" />
-    <PackageReference Include="Isas.SequencingFiles" Version="5.3.2.365" />
+    <PackageReference Include="Isas.SequencingFiles" Version="5.4.0-O00382CANV-104" />
     <PackageReference Include="JetBrains.Annotations" Version="11.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="NSubstitute" Version="2.0.3" />
