--- a/Tools/FlagUniqueKmers/FlagUniqueKmers.csproj
+++ b/Tools/FlagUniqueKmers/FlagUniqueKmers.csproj
@@ -23,7 +23,7 @@
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="4.5.0.298" />
     <PackageReference Include="Isas.Framework" Version="7.8.4.572" />
-    <PackageReference Include="Isas.SequencingFiles" Version="5.3.2.365" />
+    <PackageReference Include="Isas.SequencingFiles" Version="5.4.0-O00382CANV-104" />
     <PackageReference Include="protobuf-net" Version="2.3.2" />
   </ItemGroup>
 
