Update SequencingFiles with BedgraphWriter

--- a/Src/Canvas/CanvasTest/CanvasTest.csproj
+++ b/Src/Canvas/CanvasTest/CanvasTest.csproj
@@ -26,7 +26,7 @@
     <PackageReference Include="Castle.Core" Version="4.1.1" />
     <PackageReference Include="Illumina.Common" Version="4.11.0.329" />
     <PackageReference Include="Isas.Framework.UnitTestUtilities" Version="7.11.1.596" />
-    <PackageReference Include="Isas.SequencingFiles" Version="5.4.0.383" />
+    <PackageReference Include="Isas.SequencingFiles" Version="5.5.0-O00391CANV-104" />
     <PackageReference Include="JetBrains.Annotations" Version="11.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="NSubstitute" Version="2.0.3" />
