--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -41,7 +41,7 @@
   
     <PackageReference Include="Illumina.Common" Version="4.11.0.329" />
     <PackageReference Include="Isas.Framework" Version="7.11.1.596" />
-    <PackageReference Include="Isas.SequencingFiles" Version="5.4.0.383" />
+    <PackageReference Include="Isas.SequencingFiles" Version="5.5.0-O00391CANV-104" />
     <PackageReference Include="MathNet.Numerics.Core" Version="3.17.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="protobuf-net" Version="2.3.2" />
