--- a/Tools/EvaluateCNV/EvaluateCNV.csproj
+++ b/Tools/EvaluateCNV/EvaluateCNV.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Illumina.Common" Version="4.12.0.348" />
+    <PackageReference Include="Illumina.Common" Version="4.13.0-O00349CANV-404" />
     <PackageReference Include="Isas.SequencingFiles" Version="5.4.0.383" />
     <PackageReference Include="protobuf-net" Version="2.3.2" />
   </ItemGroup>
