--- a/Tools/FlagUniqueKmers/FlagUniqueKmers.csproj
+++ b/Tools/FlagUniqueKmers/FlagUniqueKmers.csproj
@@ -21,7 +21,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
 
   <ItemGroup>
-    <PackageReference Include="Illumina.Common" Version="4.12.0.348" />
+    <PackageReference Include="Illumina.Common" Version="4.13.0-O00349CANV-404" />
     <PackageReference Include="Isas.Framework" Version="7.11.1.596" />
     <PackageReference Include="Isas.SequencingFiles" Version="5.4.0.383" />
     <PackageReference Include="protobuf-net" Version="2.3.2" />
