--- a/Src/Canvas/Canvas.Wrapper/Canvas.Wrapper.csproj
+++ b/Src/Canvas/Canvas.Wrapper/Canvas.Wrapper.csproj
@@ -22,8 +22,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
 
   <ItemGroup>
-    <ProjectReference Include="..\Canvas\Canvas.csproj" />
     <ProjectReference Include="..\CanvasCommon\CanvasCommon.csproj" />
+    <ProjectReference Include="..\Canvas\Canvas_.csproj" />
   </ItemGroup>
 
   <ItemGroup>
